--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -1,33 +1,80 @@
 ﻿@using System.Diagnostics
 @inject IWpfService WpfService
+@inject SettingsService Settings
 
 <CascadingValue Value="this">
     <div class="h-full bg-dark flex-shrink-0 flex flex-col border-dark-550 border-r">
         <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
+        <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/>
         <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"/>
-        <MenuItem Icon="map" Text="Roadmap" Uri="/roadmap"/>
-        @* <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/> *@
         @* <MenuItem Icon="search" Text="File Inspector" Uri="/inspector"/> *@
         @* <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem> *@
         <div class="flex-grow"></div>
+        <MenuItem Icon="map" Text="Roadmap" Uri="/roadmap"/>
         <MenuItem Icon="info_outline" Text="About" Uri="/about"/>
         <MenuItem Icon="settings" Text="Settings" Uri="/settings"/>
-        <img @onclick="OpenDiscordLink" src="discord-button.png" class="p-2 rounded-md bg-grey-800 shadow-md mt-4 mx-4 cursor-pointer" style="max-width: 150px"/>
+        <img @onclick="OpenDiscordLink" src="discord-button.png" class="p-2 rounded-md bg-grey-800 shadow-md mt-4 mx-4 cursor-pointer" style="max-width: 165px"/>
         <div class="p-4">
             <small class="text-grey-500">Flagrum v@(Version)</small>
         </div>
     </div>
 </CascadingValue>
 
+<Modal @ref="VersionNotesModal" Width="800" Height="540">
+    <HeaderView>
+        <span class="text-grey-300 flex-grow">Flagrum has been Updated</span>
+        <span class="material-icons cursor-pointer" @onclick="() => VersionNotesModal.Close()">cancel</span>
+    </HeaderView>
+    <BodyView>
+        <div class="h-full">
+            <h3 class="text-grey-300 mb-4">What's new in Flagrum @Version</h3>
+            <h4 class="text-grey-300 mb-4">Asset Explorer</h4>
+            <span>
+                The Asset Explorer can be used to deal with FFXV assets from your local file system.<br/><br/>
+                Currently the Asset Explorer supports the ability to:
+            </span>
+            <ul class="list-disc ml-6 mb-4">
+                <li>Preview Game Textures</li>
+                <li>Inspect Game Materials (useful for adjusting Flagrum materials in Blender)</li>
+                <li>Export Game Textures to PNG, TGA, or DDS</li>
+                <li>Batch Export a folder, or many folders of Textures at once</li>
+            </ul>
+            <span>
+                New functionality will be added to the Asset Explorer in future updates.
+            </span>
+            <h4 class="text-grey-300 mt-6 mb-4">Steam Workshop</h4>
+            <ul class="list-disc ml-6">
+                <li>
+                    Preview Images will now be automatically compressed with the highest possible quality before
+                    uploading to Workshop if the current preview image exceeds the size limit
+                </li>
+            </ul>
+        </div>
+    </BodyView>
+</Modal>
+
 @code
 {
     private List<MenuItem> Items { get; set; } = new();
     private string Version { get; set; }
+    private Modal VersionNotesModal { get; set; }
 
     protected override void OnInitialized()
     {
         var v = WpfService.GetVersion();
         Version = $"{v.Major}.{v.Minor}.{v.Build}";
+    }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            if (Settings.LastVersionNotes != Version)
+            {
+                VersionNotesModal.Open();
+                Settings.SetLastVersionNotes(Version);
+            }
+        }
     }
 
     public void AddItem(MenuItem item)
