--- a/Flagrum.Web/Features/AssetExplorer/Previews/MaterialPreview.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Previews/MaterialPreview.razor
@@ -1,6 +1,9 @@
 ﻿@using Flagrum.Core.Gfxbin.Gmtl
 <div class="p-6">
     <div class="box p-4 mb-6">
+        <h5 class="text-grey-300 mb-2">@BaseMaterial</h5>
+    </div>
+    <div class="box p-4 mb-6">
         <h5 class="text-grey-300 mb-2">Texture Inputs</h5>
         <table>
             @foreach (var (name, fileName, path) in TextureInputs)
@@ -46,6 +49,7 @@
     [Parameter]
     public string Path { get; set; }
 
+    private string BaseMaterial { get; set; }
     private IEnumerable<(string Name, float[] Values)> MaterialInputs { get; set; }
     private IEnumerable<(string Name, string FileName, string Path)> TextureInputs { get; set; }
     private AlertModal AlertModal { get; set; }
@@ -59,6 +63,7 @@
 
         var reader = new MaterialReader(Path);
         var material = reader.Read();
+        BaseMaterial = material.Interfaces[0].Name;
 
         var inputs = material.InterfaceInputs
             .Where(i => i.InterfaceIndex == 0)
