--- a/Flagrum.Web/wwwroot/app.css
+++ b/Flagrum.Web/wwwroot/app.css
@@ -27660,37 +27660,45 @@ input:checked + .slider:before {
 }
 
 div::-webkit-scrollbar {
-  width: 12px;
+  width: 14px;
 }
 
 div::-webkit-scrollbar-track {
-  width: 12px;
-  --tw-bg-opacity: 1;
-  background-color: rgba(24, 21, 18, var(--tw-bg-opacity));
+  width: 14px;
+  border: solid 3px transparent;
+  box-shadow: inset 0 0 10px 10px #100f0c;
+  border-top-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
 }
 
 div::-webkit-scrollbar-thumb {
-  width: 8px;
+  width: 14px;
+  border: solid 3px transparent;
+  box-shadow: inset 0 0 10px 10px #292524;
+  border-top-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
+textarea::-webkit-scrollbar {
+  width: 10px;
+}
+
+textarea::-webkit-scrollbar-track {
+  width: 10px;
   border-top-left-radius: 9999px;
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
   border-bottom-left-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgba(41, 37, 36, var(--tw-bg-opacity));
-}
-
-textarea::-webkit-scrollbar {
-  width: 12px;
-}
-
-textarea::-webkit-scrollbar-track {
-  width: 12px;
-  --tw-bg-opacity: 1;
-  background-color: rgba(24, 21, 18, var(--tw-bg-opacity));
+  background-color: rgba(16, 15, 12, var(--tw-bg-opacity));
 }
 
 textarea::-webkit-scrollbar-thumb {
-  width: 8px;
+  width: 10px;
   border-top-left-radius: 9999px;
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
@@ -27702,6 +27710,37 @@ textarea::-webkit-scrollbar-thumb {
 textarea::-webkit-scrollbar-thumb:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(68, 64, 60, var(--tw-bg-opacity));
+}
+
+textarea::-webkit-scrollbar-thumb {
+  -webkit-transition-property: background-color, border-color, color, fill, stroke;
+  transition-property: background-color, border-color, color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.scrollbar-light::-webkit-scrollbar {
+  width: 14px;
+}
+
+.scrollbar-light::-webkit-scrollbar-track {
+  width: 14px;
+  border: solid 3px transparent;
+  box-shadow: inset 0 0 10px 10px #181512;
+  border-top-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
+.scrollbar-light::-webkit-scrollbar-thumb {
+  width: 14px;
+  border: solid 3px transparent;
+  box-shadow: inset 0 0 10px 10px #44403C;
+  border-top-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
 }
 
 @media (min-width: 640px) {
