Final changes for 1.1.2

--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -33,7 +33,19 @@
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.2</h4>
                 <h5 class="text-grey-300 mb-4">Modding</h5>
                 <ul class="list-disc ml-6 mb-4">
-                    <li>Added Glass Material to Flagrum and the Blender add-on</li>
+                    <li>
+                        Fixed a bug where parts of rigging could break on outfit mods when equipped on the older version
+                        of the main characters
+                    </li>
+                </ul>
+                <span class="block ml-6 mb-4" style="color: #ff0000">
+                    <strong>Recommended Action:</strong>
+                    If you have created any outfit mods, consider rebuilding them by opening the existing mod,
+                    selecting &quot;Change Model,&quot; picking the same FMD you created the mod with, then
+                    clicking &quot;Save&quot; to rebuild.
+                </span>
+                <ul class="list-disc ml-6 mb-4">
+                    <li>Added glass materials to Flagrum and the Blender add-on</li>
                     <li>Added base material name to Asset Explorer's Material Previewer</li>
                     <li>Fixed an issue where Workshop Descriptions were only loading the first 256 characters</li>
                     <li>Finalised mod tags for Workshop upload</li>
